--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html>
 <head></head>
-<body>sdfsdf</body>
+<body>
+{'user': 'NguyenThanhNhan', 'passw': '123456', 'Premium_ID': 'HCM'}
+</body>
 </html>
