Update: March 4th 2023

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html>
-<head></head>
+<!DOCTYPE html>
+<html>
 <body>
-{'user': 'NguyenThanhNhan', 'passw': '123456', 'Premium_ID': 'HCM'}
+<pre></pre>
 </body>
 </html>
